crates/reap-pm-live/tests/ui/read_only_monitor_has_no_mutation.rs
use reap_pm_live::PmReadOnlyMonitor;

fn escalate(root: &PmReadOnlyMonitor) {
    let _ = root.execution();
    root.place();
}

fn main() {}
